testdata/golden/sema/invalid/concurrency/guarded_by_not_lock.sg
// Invalid @guarded_by usage - field is not Mutex or RwLock

type BadGuard = {
    counter: int,
    @guarded_by("counter") value: int,
}

type BadGuard2 = {
    name: string,
    @guarded_by("name") data: int,
}
